--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #222831;
+  background-color: #0b599d;
 }
 
 header {
@@ -27,7 +27,7 @@ header {
 
 .navigation a {
   text-decoration: none;
-  color: #eeeeee;
+  color: #8f1616;
 }
 
 .navigation a:hover {
@@ -79,7 +79,7 @@ hr {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 }
 .cv {
-  background-color: rgba(57, 62, 70, 0.75);
+  background-color: rgba(26, 102, 10, 0.75);
   color: #eeeeee;
   border-radius: 24px;
   text-decoration: none;
@@ -121,7 +121,7 @@ hr {
 }
 
 .works {
-  background-image: url("assets/svg/background.svg");
+  background-image: url("assets/svg/proxy-image.svg");
   padding: 10rem 10rem;
   margin: 5rem 0rem;
 }
@@ -149,7 +149,7 @@ hr {
 }
 .works li {
   border-radius: 16px;
-  background-color: rgba(57, 62, 70, 0.5);
+  background-color: rgba(1, 16, 6, 0.5);
   backdrop-filter: blur(4px);
   padding: 1rem 4rem;
 }
